class ProtocolHandler:
    """
    Responsible for encoding and decoding L-SNMPvS protocol messages.

    This class does NOT access or modify the MIB.
    It only translates between Python data structures and protocol strings.

    Methods:
        decode_message(data: bytes) -> dict
            Converts raw bytes into a structured message dictionary.
        
        encode_message(msg_type: str, payload: dict) -> bytes
            Converts a message type and a dictionary of data into a bytes object.
    """

    def __init__(self):
        """
        Initializes the ProtocolHandler.
        No attributes are strictly necessary here for now.
        """
        pass

    def decode_message(self, data: bytes) -> dict:
        """
        Parses a message received via UDP and returns a structured dictionary.

        :param data: Raw bytes from the network (e.g., b'GET|temp1')
        :return: Dictionary with operation and parameters (e.g., {'operation': 'GET', 'id': 'temp1'})
        """
        pass

    def encode_message(self, msg_type: str, payload: dict) -> bytes:
        """
        Encodes a structured response into the L-SNMPvS byte format for network transmission.

        :param msg_type: Message type (e.g., 'RESPONSE', 'NOTIFY')
        :param payload: Dictionary of data to include (e.g., {'status': 'OK', 'value': 22})
        :return: Encoded bytes (e.g., b'RESPONSE|status=OK;value=22')
        """
        pass
